logs/beamline.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beamline'...
Compiling './lib/python3.5/site-packages/beamline/blparser.py'...
***   File "./lib/python3.5/site-packages/beamline/blparser.py", line 73
    print "beamline " + idbl + " not found"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/beamline/element.py'...
***   File "./lib/python3.5/site-packages/beamline/element.py", line 408
    print "Please setDraw() before showDraw(), then try again."
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/beamline/matchutils.py'...
***   File "./lib/python3.5/site-packages/beamline/matchutils.py", line 441
    print fel.getMaxPower()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/beamline/mathutils.py'...
***   File "./lib/python3.5/site-packages/beamline/mathutils.py", line 542
    print f1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/beamline/models.py'...
***   File "./lib/python3.5/site-packages/beamline/models.py", line 405
    print latins.getElementConf('c', raw=True)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/beamline/pltutils.py'...
***   File "./lib/python3.5/site-packages/beamline/pltutils.py", line 107
    print "unknown element\n"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/beamline/ui'...
Compiling './lib/python3.5/site-packages/beamline/ui/myappframe.py'...
***   File "./lib/python3.5/site-packages/beamline/ui/myappframe.py", line 252
    print event.GetColumn()
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/beamline-1.3.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
